--- a/UnicodeFileToHtmlTextConverter/UnicodeFileToHtmlTextConverter/UnicodeFileToHtmlTextConverter.csproj
+++ b/UnicodeFileToHtmlTextConverter/UnicodeFileToHtmlTextConverter/UnicodeFileToHtmlTextConverter.csproj
@@ -44,6 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\FileReader.cs" />
+    <Compile Include="Contracts\HtmlConverter.cs" />
+    <Compile Include="Contracts\IFileReader.cs" />
+    <Compile Include="Contracts\IHtmlConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnicodeFileToHtmlTextConverter.cs" />
